Trainer implementation